# rules_vitest

./: .bazelignore  .gitignore  .npmrc  BUILD.bazel  LICENSE  MODULE.bazel  README.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
.bcr/: metadata.template.json
.github/workflows/: ci.yaml
docs/: troubleshooting.md
e2e/: smoke.sh
e2e/bzlmod/: BUILD.bazel  MODULE.bazel  math.js  math.test.js  package.json  pnpm-lock.yaml
example/: BUILD.bazel  package.json
example/custom_reporters/: BUILD.bazel  custom_reporter.cjs  math.test.js  vitest.config.mjs
example/custom_snapshot_path/: BUILD.bazel  custom.js  custom.test.js  vitest.config.mjs
example/custom_snapshot_path/__snaps__/: custom.test.js.snap
example/esm/: BUILD.bazel  add.test.mjs
example/filtering/: BUILD.bazel  alpha.test.js  beta.test.js
example/multiple_snapshots/: BUILD.bazel
example/multiple_snapshots/alpha/: alpha.js  alpha.test.js
example/multiple_snapshots/alpha/__snapshots__/: alpha.test.js.snap
example/multiple_snapshots/beta/: beta.js  beta.test.js
example/multiple_snapshots/beta/__snapshots__/: beta.test.js.snap
example/no_auto_reporters/: BUILD.bazel  truth.js  truth.test.js
example/sharding/: BUILD.bazel  a.test.js  b.test.js  c.test.js  shared.js
example/simple/: BUILD.bazel  sum.test.js
example/snapshots/: BUILD.bazel  render.js  render.test.js
example/snapshots/__snapshots__/: render.test.js.snap
example/typescript_config/: BUILD.bazel  greeter.js  greeter.test.js
vitest/: BUILD.bazel  defs.bzl
vitest/private/: BUILD.bazel  merger.sh  snapshot_sync.mjs  vitest_config_helper.mjs  vitest_config_template.mjs  vitest_test.bzl  vitest_wrapper.mjs
