load("@bazel_skylib//:bzl_library.bzl", "bzl_library")

exports_files(["defs.bzl"])

bzl_library(
    name = "defs",
    srcs = ["defs.bzl"],
    visibility = ["//visibility:public"],
    deps = [
        "//vitest/private:vitest_test",
        "@aspect_bazel_lib//lib:copy_file",
        "@aspect_bazel_lib//lib:utils",
    ],
)
