load("//vitest:defs.bzl", "vitest_test")

vitest_test(
    name = "test",
    node_modules = "//:node_modules",
    data = [
        "alpha/alpha.js",
        "alpha/alpha.test.js",
        "beta/beta.js",
        "beta/beta.test.js",
    ],
    snapshots = [
        "alpha/__snapshots__",
        "beta/__snapshots__",
    ],
)
