load("@bazel_skylib//:bzl_library.bzl", "bzl_library")
load("@rules_shell//shell:sh_binary.bzl", "sh_binary")

exports_files([
    "snapshot_sync.mjs",
    "vitest_config_helper.mjs",
    "vitest_config_template.mjs",
    "vitest_wrapper.mjs",
])

sh_binary(
    name = "merger",
    srcs = ["merger.sh"],
    visibility = ["//visibility:public"],
)

bzl_library(
    name = "vitest_test",
    srcs = ["vitest_test.bzl"],
    visibility = ["//vitest:__subpackages__"],
    deps = [
        "@aspect_bazel_lib//lib:copy_to_bin",
        "@aspect_rules_js//js:libs",
        "@bazel_skylib//lib:dicts",
        "@bazel_skylib//lib:paths",
    ],
)
